# malv

./: CMakeLists.txt  README.md
include/: alsong.h  lyrics.h  player.h  song.h  status.h  ui.h
src/: alsong.cpp  lyrics.cpp  main.cpp  player.cpp  ui.cpp
